...
            val collapseLongMessages = appState.collapseLongMessagesInGroup(controller.group.groupIdHex)
            Column(
                Modifier
                    .fillMaxSize()
                    .padding(padding)
                    .whiteNoiseVerticalScroll(detailsScrollState)
                    .testTag("chat_info.list")
                    .padding(bottom = 24.dp),
            ) {
                GroupDetailsHeader(
                    title = conversationTitle,
                    subtitle =
                        if (isDm) {
...
