appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-selection-contact-cancel
---
- assertVisible: Share contact
- assertVisible: Fixture Contact
- tapOn: Close
- assertVisible:
    id: presentation.complete
