appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-tts-custom-apply
---
- assertVisible: Custom
- assertVisible: Speech rate
- tapOn: Apply
- assertVisible:
    id: presentation.complete
