appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-tts-trust-cancel
---
- assertVisible: External text-to-speech engine
- tapOn: Cancel
- assertVisible:
    id: presentation.complete
